projects/ams/logic-service/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logic
  name: logic-svc
  namespace: ams-dev
spec:
  ports:
    - port: 8012
      protocol: TCP
      targetPort: 8012
  selector:
    app: logic
